Standard means standard