@@ -139,6 +139,6 @@ public record Wall(Wall.Orientation orientation, Vector a, Vector b, long id) im
 
     @Override
     public String toString() {
-        return String.format("%s %s", a, b);
+        return "%s %s".formatted(a, b);
     }
 }
